# LinuxEmbeeded

./: CMakeLists.txt  README.md  launch.vs.json  runComTest.ps1
ComUdpProxy/: CMakeLists.txt  ComUdpProxy.cpp  ComUdpProxy.h  Message.h  Receiver.h  Sender.h
UdpListener/: UdpListener.sln
UdpListener/UdpListener/: Program.cs  UDPListener1.cs
